fix position mobile

--- a/src/responsive.scss
+++ b/src/responsive.scss
@@ -721,7 +721,7 @@
     .positions {
       .position {
         padding: 14px 15px;
-        h4 {
+        h5 {
           font-size: 14px;
           line-height: 18px;
         }
